# PythonFlaskProject

./: .env.example  01_basic_routes.py  02_route_urls_arguments.py  03_render_htm_tmpl.py  04_basic_form_data_capture.py  05_form_post_files.py  README.md  config.py  first_app.py  form_post_files.py  forms.py  main.py  models.py  pyproject.toml  requirements.txt  route_urls.py  tmpl_htm.py  wtforms_learn.py
templates/: 04_basic_form_data_capture.html  base.html  dashboard.html  file_upload.html  form.html  form_post_files.html  index.html  login.html  other.html  register.html  wtforms_learn.html
typings/flask_wtf/: file.pyi  form.pyi
