[project]
name = "pythonflaskproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "blinker==1.9.0",
    "click==8.1.8",
    "colorama==0.4.6",
    "flask==3.1.0",
    "flask-wtf>=1.3.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.5",
    "markupsafe==3.0.2",
    "sqlalchemy>=2.0.49",
    "werkzeug==3.1.3",
    "email-validator>=2.0.0",
]
